--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,29 @@
 .col-md-1{
-	background-color:#f5f5f5;
-    border: 1px solid #79BD9A;
-    width: 70px;
-    height: 70px;
-    background-size:contain;
+  width: 70px;
+  height: 70px;
+  background-color: white;
+  background-size:contain;
+  background-repeat: no-repeat;
+  border: 1px solid #79BD9A;
+
+}
+@media screen and (max-width: 580px) {
+    .col-md-1 {
+        width: 50px;
+        height: 50px;
+    }
+}
+.row {
+  width: 100%;
+  display: flex;
+  justify-content:center;
+
 }
 
-@media screen and (max-width: 1180px) {
-    .col-md-1{
-    width: 60px;
-    height: 60px;
-		}
-    }
+* {
+  box-sizing: border-box;
+}
+
 
 .title { 
   margin-top: 20px;
@@ -22,6 +34,7 @@
     letter-spacing: -.028em;
     color: white;
     text-transform: uppercase;
+    text-align: center;
 }
 .instuction{
   padding-top :20px;
@@ -29,12 +42,14 @@
   color:white;
   font-style: Arial;
   font-size: 18px;
+  text-align: center;
 
 }
 .background{
  background-image:url("../images/sea.jpg");
- 
+ }
+ .grid{
+  display: flex;
+  flex-direction:column;
 }
-;
 
-}
